    - the cluster map now indicates unused map blocks with gray color
    - one bug preventing a proper redraw of defragmented files was fixed
    - few bugs causing infinite loops in defragmentation algorithm were fixed
    - one bug preventing MFT defragmentation was fixed
    - one bug preventing reports containing Asian characters in file names
      from being built was fixed
    - the documentation was updated to include better information about
      taking screen-shots and creating support packages on the bug reports page
    - tree-view to select chapters was added to documentation and the
      default doxygen color theme is now used
    
    - the following translations were added:

      English (GB), Iloko
    
    - the following translations were updated:
    
      Korean, Turkish, Slovak, English (US), Hindi, Romanian, Filipino (Tagalog),
      Catalan, Spanish (ES), Greek, Chinese (Simplified), Polish, Swedish, 
      Italian, Finnish, Chinese (Traditional), German, Hungarian
      
    - hexview command added to the boot time shell
    - Developers: udefrag_start_job prototype changed by adding algorithm 
      preview flags

    beta2:
    - UD_LOG_FILE_PATH environment variable added to force save of debugging
      information to a log file. Intended for use in boot time interface
      and batch scripts.
      For the GUI a setting was introduced, which is equivalent to setting
      this variable.
    - boot time interface startup logging added; the program saves log files
      in %windir%\UltraDefrag\logs folder
    - a bug preventing the boot time defragmenter from being turned off fixed

    - the following translations were added:

      Indonesian

    - the following translations were updated:

      Spanish(ES), Czech, Belarusian, Ukrainian, Chinese(Traditional)

    - Developers: winx_strdup, winx_vsprintf, winx_sprintf, winx_enable_dbg_log,
      winx_disable_dbg_log, winx_get_module_filename, winx_path_remove_filename,